parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    STRING
    COLON
    QMARK

Grammar

Rule 0     S' -> prog
Rule 1     prog -> func
Rule 2     prog -> func prog
Rule 3     func -> DEF type iden LPAREN flist RPAREN LBRACE body RBRACE
Rule 4     body -> stmt
Rule 5     body -> stmt body
Rule 6     stmt -> expr SEMI_COLON
Rule 7     stmt -> defvar SEMI_COLON
Rule 8     stmt -> IF LPAREN expr RPAREN stmt
Rule 9     stmt -> IF LPAREN expr RPAREN stmt ELSE stmt
Rule 10    stmt -> WHILE LPAREN expr RPAREN stmt
Rule 11    stmt -> FOR LPAREN expr TO expr RPAREN stmt
Rule 12    stmt -> RETURN expr SEMI_COLON
Rule 13    stmt -> LBRACE body RBRACE
Rule 14    expr -> iden LPAREN clist RPAREN
Rule 15    expr -> expr LSQUAREBR expr RSQUAREBR
Rule 16    expr -> expr EQ expr
Rule 17    expr -> expr PLUS expr
Rule 18    expr -> expr MINUS expr
Rule 19    expr -> expr TIMES expr
Rule 20    expr -> expr DIVIDE expr
Rule 21    expr -> expr MOD expr
Rule 22    expr -> expr LESS_THAN expr
Rule 23    expr -> expr GREATER_THAN expr
Rule 24    expr -> expr PARITY expr
Rule 25    expr -> expr NOT_EQ expr
Rule 26    expr -> expr LESS_EQUAL expr
Rule 27    expr -> expr GREATER_EQUAL expr
Rule 28    expr -> expr OR expr
Rule 29    expr -> expr AND expr
Rule 30    expr -> NOT expr
Rule 31    expr -> MINUS expr
Rule 32    expr -> PLUS expr
Rule 33    expr -> LPAREN expr RPAREN
Rule 34    expr -> iden
Rule 35    expr -> num
Rule 36    flist -> type iden
Rule 37    flist -> type iden COMMA flist
Rule 38    flist -> <empty>
Rule 39    clist -> expr
Rule 40    clist -> expr COMMA clist
Rule 41    clist -> <empty>
Rule 42    defvar -> VAR type iden
Rule 43    type -> INT
Rule 44    type -> VECTOR
Rule 45    type -> NULL
Rule 46    num -> NUM
Rule 47    iden -> IDEN

Terminals, with rules where they appear

AND                  : 29
COLON                : 
COMMA                : 37 40
DEF                  : 3
DIVIDE               : 20
ELSE                 : 9
EQ                   : 16
FOR                  : 11
GREATER_EQUAL        : 27
GREATER_THAN         : 23
IDEN                 : 47
IF                   : 8 9
INT                  : 43
LBRACE               : 3 13
LESS_EQUAL           : 26
LESS_THAN            : 22
LPAREN               : 3 8 9 10 11 14 33
LSQUAREBR            : 15
MINUS                : 18 31
MOD                  : 21
NOT                  : 30
NOT_EQ               : 25
NULL                 : 45
NUM                  : 46
OR                   : 28
PARITY               : 24
PLUS                 : 17 32
QMARK                : 
RBRACE               : 3 13
RETURN               : 12
RPAREN               : 3 8 9 10 11 14 33
RSQUAREBR            : 15
SEMI_COLON           : 6 7 12
STRING               : 
TIMES                : 19
TO                   : 11
VAR                  : 42
VECTOR               : 44
WHILE                : 10
error                : 

Nonterminals, with rules where they appear

body                 : 3 5 13
clist                : 14 40
defvar               : 7
expr                 : 6 8 9 10 11 11 12 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 31 32 33 39 40
flist                : 3 37
func                 : 1 2
iden                 : 3 14 34 36 37 42
num                  : 35
prog                 : 2 0
stmt                 : 4 5 8 9 9 10 11
type                 : 3 36 37 42

Parsing method: LALR

state 0

    (0) S' -> . prog
    (1) prog -> . func
    (2) prog -> . func prog
    (3) func -> . DEF type iden LPAREN flist RPAREN LBRACE body RBRACE

    DEF             shift and go to state 3

    prog                           shift and go to state 1
    func                           shift and go to state 2

state 1

    (0) S' -> prog .



state 2

    (1) prog -> func .
    (2) prog -> func . prog
    (1) prog -> . func
    (2) prog -> . func prog
    (3) func -> . DEF type iden LPAREN flist RPAREN LBRACE body RBRACE

    $end            reduce using rule 1 (prog -> func .)
    DEF             shift and go to state 3

    func                           shift and go to state 2
    prog                           shift and go to state 4

state 3

    (3) func -> DEF . type iden LPAREN flist RPAREN LBRACE body RBRACE
    (43) type -> . INT
    (44) type -> . VECTOR
    (45) type -> . NULL

    INT             shift and go to state 6
    VECTOR          shift and go to state 7
    NULL            shift and go to state 8

    type                           shift and go to state 5

state 4

    (2) prog -> func prog .

    $end            reduce using rule 2 (prog -> func prog .)


state 5

    (3) func -> DEF type . iden LPAREN flist RPAREN LBRACE body RBRACE
    (47) iden -> . IDEN

    IDEN            shift and go to state 10

    iden                           shift and go to state 9

state 6

    (43) type -> INT .

    IDEN            reduce using rule 43 (type -> INT .)


state 7

    (44) type -> VECTOR .

    IDEN            reduce using rule 44 (type -> VECTOR .)


state 8

    (45) type -> NULL .

    IDEN            reduce using rule 45 (type -> NULL .)


state 9

    (3) func -> DEF type iden . LPAREN flist RPAREN LBRACE body RBRACE

    LPAREN          shift and go to state 11


state 10

    (47) iden -> IDEN .

    LPAREN          reduce using rule 47 (iden -> IDEN .)
    COMMA           reduce using rule 47 (iden -> IDEN .)
    RPAREN          reduce using rule 47 (iden -> IDEN .)
    SEMI_COLON      reduce using rule 47 (iden -> IDEN .)
    LSQUAREBR       reduce using rule 47 (iden -> IDEN .)
    EQ              reduce using rule 47 (iden -> IDEN .)
    PLUS            reduce using rule 47 (iden -> IDEN .)
    MINUS           reduce using rule 47 (iden -> IDEN .)
    TIMES           reduce using rule 47 (iden -> IDEN .)
    DIVIDE          reduce using rule 47 (iden -> IDEN .)
    MOD             reduce using rule 47 (iden -> IDEN .)
    LESS_THAN       reduce using rule 47 (iden -> IDEN .)
    GREATER_THAN    reduce using rule 47 (iden -> IDEN .)
    PARITY          reduce using rule 47 (iden -> IDEN .)
    NOT_EQ          reduce using rule 47 (iden -> IDEN .)
    LESS_EQUAL      reduce using rule 47 (iden -> IDEN .)
    GREATER_EQUAL   reduce using rule 47 (iden -> IDEN .)
    OR              reduce using rule 47 (iden -> IDEN .)
    AND             reduce using rule 47 (iden -> IDEN .)
    RSQUAREBR       reduce using rule 47 (iden -> IDEN .)
    TO              reduce using rule 47 (iden -> IDEN .)


state 11

    (3) func -> DEF type iden LPAREN . flist RPAREN LBRACE body RBRACE
    (36) flist -> . type iden
    (37) flist -> . type iden COMMA flist
    (38) flist -> .
    (43) type -> . INT
    (44) type -> . VECTOR
    (45) type -> . NULL

    RPAREN          reduce using rule 38 (flist -> .)
    INT             shift and go to state 6
    VECTOR          shift and go to state 7
    NULL            shift and go to state 8

    type                           shift and go to state 12
    flist                          shift and go to state 13

state 12

    (36) flist -> type . iden
    (37) flist -> type . iden COMMA flist
    (47) iden -> . IDEN

    IDEN            shift and go to state 10

    iden                           shift and go to state 14

state 13

    (3) func -> DEF type iden LPAREN flist . RPAREN LBRACE body RBRACE

    RPAREN          shift and go to state 15


state 14

    (36) flist -> type iden .
    (37) flist -> type iden . COMMA flist

    RPAREN          reduce using rule 36 (flist -> type iden .)
    COMMA           shift and go to state 16


state 15

    (3) func -> DEF type iden LPAREN flist RPAREN . LBRACE body RBRACE

    LBRACE          shift and go to state 17


state 16

    (37) flist -> type iden COMMA . flist
    (36) flist -> . type iden
    (37) flist -> . type iden COMMA flist
    (38) flist -> .
    (43) type -> . INT
    (44) type -> . VECTOR
    (45) type -> . NULL

    RPAREN          reduce using rule 38 (flist -> .)
    INT             shift and go to state 6
    VECTOR          shift and go to state 7
    NULL            shift and go to state 8

    type                           shift and go to state 12
    flist                          shift and go to state 18

state 17

    (3) func -> DEF type iden LPAREN flist RPAREN LBRACE . body RBRACE
    (4) body -> . stmt
    (5) body -> . stmt body
    (6) stmt -> . expr SEMI_COLON
    (7) stmt -> . defvar SEMI_COLON
    (8) stmt -> . IF LPAREN expr RPAREN stmt
    (9) stmt -> . IF LPAREN expr RPAREN stmt ELSE stmt
    (10) stmt -> . WHILE LPAREN expr RPAREN stmt
    (11) stmt -> . FOR LPAREN expr TO expr RPAREN stmt
    (12) stmt -> . RETURN expr SEMI_COLON
    (13) stmt -> . LBRACE body RBRACE
    (14) expr -> . iden LPAREN clist RPAREN
    (15) expr -> . expr LSQUAREBR expr RSQUAREBR
    (16) expr -> . expr EQ expr
    (17) expr -> . expr PLUS expr
    (18) expr -> . expr MINUS expr
    (19) expr -> . expr TIMES expr
    (20) expr -> . expr DIVIDE expr
    (21) expr -> . expr MOD expr
    (22) expr -> . expr LESS_THAN expr
    (23) expr -> . expr GREATER_THAN expr
    (24) expr -> . expr PARITY expr
    (25) expr -> . expr NOT_EQ expr
    (26) expr -> . expr LESS_EQUAL expr
    (27) expr -> . expr GREATER_EQUAL expr
    (28) expr -> . expr OR expr
    (29) expr -> . expr AND expr
    (30) expr -> . NOT expr
    (31) expr -> . MINUS expr
    (32) expr -> . PLUS expr
    (33) expr -> . LPAREN expr RPAREN
    (34) expr -> . iden
    (35) expr -> . num
    (42) defvar -> . VAR type iden
    (47) iden -> . IDEN
    (46) num -> . NUM

    IF              shift and go to state 26
    WHILE           shift and go to state 27
    FOR             shift and go to state 28
    RETURN          shift and go to state 29
    LBRACE          shift and go to state 21
    NOT             shift and go to state 32
    MINUS           shift and go to state 31
    PLUS            shift and go to state 30
    LPAREN          shift and go to state 20
    VAR             shift and go to state 34
    IDEN            shift and go to state 10
    NUM             shift and go to state 35

    iden                           shift and go to state 19
    body                           shift and go to state 22
    stmt                           shift and go to state 23
    expr                           shift and go to state 24
    defvar                         shift and go to state 25
    num                            shift and go to state 33

state 18

    (37) flist -> type iden COMMA flist .

    RPAREN          reduce using rule 37 (flist -> type iden COMMA flist .)


state 19

    (14) expr -> iden . LPAREN clist RPAREN
    (34) expr -> iden .

    LPAREN          shift and go to state 36
    SEMI_COLON      reduce using rule 34 (expr -> iden .)
    LSQUAREBR       reduce using rule 34 (expr -> iden .)
    EQ              reduce using rule 34 (expr -> iden .)
    PLUS            reduce using rule 34 (expr -> iden .)
    MINUS           reduce using rule 34 (expr -> iden .)
    TIMES           reduce using rule 34 (expr -> iden .)
    DIVIDE          reduce using rule 34 (expr -> iden .)
    MOD             reduce using rule 34 (expr -> iden .)
    LESS_THAN       reduce using rule 34 (expr -> iden .)
    GREATER_THAN    reduce using rule 34 (expr -> iden .)
    PARITY          reduce using rule 34 (expr -> iden .)
    NOT_EQ          reduce using rule 34 (expr -> iden .)
    LESS_EQUAL      reduce using rule 34 (expr -> iden .)
    GREATER_EQUAL   reduce using rule 34 (expr -> iden .)
    OR              reduce using rule 34 (expr -> iden .)
    AND             reduce using rule 34 (expr -> iden .)
    RPAREN          reduce using rule 34 (expr -> iden .)
    COMMA           reduce using rule 34 (expr -> iden .)
    RSQUAREBR       reduce using rule 34 (expr -> iden .)
    TO              reduce using rule 34 (expr -> iden .)


state 20

    (33) expr -> LPAREN . expr RPAREN
    (14) expr -> . iden LPAREN clist RPAREN
    (15) expr -> . expr LSQUAREBR expr RSQUAREBR
    (16) expr -> . expr EQ expr
    (17) expr -> . expr PLUS expr
    (18) expr -> . expr MINUS expr
    (19) expr -> . expr TIMES expr
    (20) expr -> . expr DIVIDE expr
    (21) expr -> . expr MOD expr
    (22) expr -> . expr LESS_THAN expr
    (23) expr -> . expr GREATER_THAN expr
    (24) expr -> . expr PARITY expr
    (25) expr -> . expr NOT_EQ expr
    (26) expr -> . expr LESS_EQUAL expr
    (27) expr -> . expr GREATER_EQUAL expr
    (28) expr -> . expr OR expr
    (29) expr -> . expr AND expr
    (30) expr -> . NOT expr
    (31) expr -> . MINUS expr
    (32) expr -> . PLUS expr
    (33) expr -> . LPAREN expr RPAREN
    (34) expr -> . iden
    (35) expr -> . num
    (47) iden -> . IDEN
    (46) num -> . NUM

    NOT             shift and go to state 32
    MINUS           shift and go to state 31
    PLUS            shift and go to state 30
    LPAREN          shift and go to state 20
    IDEN            shift and go to state 10
    NUM             shift and go to state 35

    expr                           shift and go to state 37
    iden                           shift and go to state 19
    num                            shift and go to state 33

state 21

    (13) stmt -> LBRACE . body RBRACE
    (4) body -> . stmt
    (5) body -> . stmt body
    (6) stmt -> . expr SEMI_COLON
    (7) stmt -> . defvar SEMI_COLON
    (8) stmt -> . IF LPAREN expr RPAREN stmt
    (9) stmt -> . IF LPAREN expr RPAREN stmt ELSE stmt
    (10) stmt -> . WHILE LPAREN expr RPAREN stmt
    (11) stmt -> . FOR LPAREN expr TO expr RPAREN stmt
    (12) stmt -> . RETURN expr SEMI_COLON
    (13) stmt -> . LBRACE body RBRACE
    (14) expr -> . iden LPAREN clist RPAREN
    (15) expr -> . expr LSQUAREBR expr RSQUAREBR
    (16) expr -> . expr EQ expr
    (17) expr -> . expr PLUS expr
    (18) expr -> . expr MINUS expr
    (19) expr -> . expr TIMES expr
    (20) expr -> . expr DIVIDE expr
    (21) expr -> . expr MOD expr
    (22) expr -> . expr LESS_THAN expr
    (23) expr -> . expr GREATER_THAN expr
    (24) expr -> . expr PARITY expr
    (25) expr -> . expr NOT_EQ expr
    (26) expr -> . expr LESS_EQUAL expr
    (27) expr -> . expr GREATER_EQUAL expr
    (28) expr -> . expr OR expr
    (29) expr -> . expr AND expr
    (30) expr -> . NOT expr
    (31) expr -> . MINUS expr
    (32) expr -> . PLUS expr
    (33) expr -> . LPAREN expr RPAREN
    (34) expr -> . iden
    (35) expr -> . num
    (42) defvar -> . VAR type iden
    (47) iden -> . IDEN
    (46) num -> . NUM

    IF              shift and go to state 26
    WHILE           shift and go to state 27
    FOR             shift and go to state 28
    RETURN          shift and go to state 29
    LBRACE          shift and go to state 21
    NOT             shift and go to state 32
    MINUS           shift and go to state 31
    PLUS            shift and go to state 30
    LPAREN          shift and go to state 20
    VAR             shift and go to state 34
    IDEN            shift and go to state 10
    NUM             shift and go to state 35

    body                           shift and go to state 38
    stmt                           shift and go to state 23
    expr                           shift and go to state 24
    defvar                         shift and go to state 25
    iden                           shift and go to state 19
    num                            shift and go to state 33

state 22

    (3) func -> DEF type iden LPAREN flist RPAREN LBRACE body . RBRACE

    RBRACE          shift and go to state 39


state 23

    (4) body -> stmt .
    (5) body -> stmt . body
    (4) body -> . stmt
    (5) body -> . stmt body
    (6) stmt -> . expr SEMI_COLON
    (7) stmt -> . defvar SEMI_COLON
    (8) stmt -> . IF LPAREN expr RPAREN stmt
    (9) stmt -> . IF LPAREN expr RPAREN stmt ELSE stmt
    (10) stmt -> . WHILE LPAREN expr RPAREN stmt
    (11) stmt -> . FOR LPAREN expr TO expr RPAREN stmt
    (12) stmt -> . RETURN expr SEMI_COLON
    (13) stmt -> . LBRACE body RBRACE
    (14) expr -> . iden LPAREN clist RPAREN
    (15) expr -> . expr LSQUAREBR expr RSQUAREBR
    (16) expr -> . expr EQ expr
    (17) expr -> . expr PLUS expr
    (18) expr -> . expr MINUS expr
    (19) expr -> . expr TIMES expr
    (20) expr -> . expr DIVIDE expr
    (21) expr -> . expr MOD expr
    (22) expr -> . expr LESS_THAN expr
    (23) expr -> . expr GREATER_THAN expr
    (24) expr -> . expr PARITY expr
    (25) expr -> . expr NOT_EQ expr
    (26) expr -> . expr LESS_EQUAL expr
    (27) expr -> . expr GREATER_EQUAL expr
    (28) expr -> . expr OR expr
    (29) expr -> . expr AND expr
    (30) expr -> . NOT expr
    (31) expr -> . MINUS expr
    (32) expr -> . PLUS expr
    (33) expr -> . LPAREN expr RPAREN
    (34) expr -> . iden
    (35) expr -> . num
    (42) defvar -> . VAR type iden
    (47) iden -> . IDEN
    (46) num -> . NUM

    RBRACE          reduce using rule 4 (body -> stmt .)
    IF              shift and go to state 26
    WHILE           shift and go to state 27
    FOR             shift and go to state 28
    RETURN          shift and go to state 29
    LBRACE          shift and go to state 21
    NOT             shift and go to state 32
    MINUS           shift and go to state 31
    PLUS            shift and go to state 30
    LPAREN          shift and go to state 20
    VAR             shift and go to state 34
    IDEN            shift and go to state 10
    NUM             shift and go to state 35

    stmt                           shift and go to state 23
    body                           shift and go to state 40
    expr                           shift and go to state 24
    defvar                         shift and go to state 25
    iden                           shift and go to state 19
    num                            shift and go to state 33

state 24

    (6) stmt -> expr . SEMI_COLON
    (15) expr -> expr . LSQUAREBR expr RSQUAREBR
    (16) expr -> expr . EQ expr
    (17) expr -> expr . PLUS expr
    (18) expr -> expr . MINUS expr
    (19) expr -> expr . TIMES expr
    (20) expr -> expr . DIVIDE expr
    (21) expr -> expr . MOD expr
    (22) expr -> expr . LESS_THAN expr
    (23) expr -> expr . GREATER_THAN expr
    (24) expr -> expr . PARITY expr
    (25) expr -> expr . NOT_EQ expr
    (26) expr -> expr . LESS_EQUAL expr
    (27) expr -> expr . GREATER_EQUAL expr
    (28) expr -> expr . OR expr
    (29) expr -> expr . AND expr

    SEMI_COLON      shift and go to state 41
    LSQUAREBR       shift and go to state 42
    EQ              shift and go to state 43
    PLUS            shift and go to state 44
    MINUS           shift and go to state 45
    TIMES           shift and go to state 46
    DIVIDE          shift and go to state 47
    MOD             shift and go to state 48
    LESS_THAN       shift and go to state 49
    GREATER_THAN    shift and go to state 50
    PARITY          shift and go to state 51
    NOT_EQ          shift and go to state 52
    LESS_EQUAL      shift and go to state 53
    GREATER_EQUAL   shift and go to state 54
    OR              shift and go to state 55
    AND             shift and go to state 56


state 25

    (7) stmt -> defvar . SEMI_COLON

    SEMI_COLON      shift and go to state 57


state 26

    (8) stmt -> IF . LPAREN expr RPAREN stmt
    (9) stmt -> IF . LPAREN expr RPAREN stmt ELSE stmt

    LPAREN          shift and go to state 58


state 27

    (10) stmt -> WHILE . LPAREN expr RPAREN stmt

    LPAREN          shift and go to state 59


state 28

    (11) stmt -> FOR . LPAREN expr TO expr RPAREN stmt

    LPAREN          shift and go to state 60


state 29

    (12) stmt -> RETURN . expr SEMI_COLON
    (14) expr -> . iden LPAREN clist RPAREN
    (15) expr -> . expr LSQUAREBR expr RSQUAREBR
    (16) expr -> . expr EQ expr
    (17) expr -> . expr PLUS expr
    (18) expr -> . expr MINUS expr
    (19) expr -> . expr TIMES expr
    (20) expr -> . expr DIVIDE expr
    (21) expr -> . expr MOD expr
    (22) expr -> . expr LESS_THAN expr
    (23) expr -> . expr GREATER_THAN expr
    (24) expr -> . expr PARITY expr
    (25) expr -> . expr NOT_EQ expr
    (26) expr -> . expr LESS_EQUAL expr
    (27) expr -> . expr GREATER_EQUAL expr
    (28) expr -> . expr OR expr
    (29) expr -> . expr AND expr
    (30) expr -> . NOT expr
    (31) expr -> . MINUS expr
    (32) expr -> . PLUS expr
    (33) expr -> . LPAREN expr RPAREN
    (34) expr -> . iden
    (35) expr -> . num
    (47) iden -> . IDEN
    (46) num -> . NUM

    NOT             shift and go to state 32
    MINUS           shift and go to state 31
    PLUS            shift and go to state 30
    LPAREN          shift and go to state 20
    IDEN            shift and go to state 10
    NUM             shift and go to state 35

    expr                           shift and go to state 61
    iden                           shift and go to state 19
    num                            shift and go to state 33

state 30

    (32) expr -> PLUS . expr
    (14) expr -> . iden LPAREN clist RPAREN
    (15) expr -> . expr LSQUAREBR expr RSQUAREBR
    (16) expr -> . expr EQ expr
    (17) expr -> . expr PLUS expr
    (18) expr -> . expr MINUS expr
    (19) expr -> . expr TIMES expr
    (20) expr -> . expr DIVIDE expr
    (21) expr -> . expr MOD expr
    (22) expr -> . expr LESS_THAN expr
    (23) expr -> . expr GREATER_THAN expr
    (24) expr -> . expr PARITY expr
    (25) expr -> . expr NOT_EQ expr
    (26) expr -> . expr LESS_EQUAL expr
    (27) expr -> . expr GREATER_EQUAL expr
    (28) expr -> . expr OR expr
    (29) expr -> . expr AND expr
    (30) expr -> . NOT expr
    (31) expr -> . MINUS expr
    (32) expr -> . PLUS expr
    (33) expr -> . LPAREN expr RPAREN
    (34) expr -> . iden
    (35) expr -> . num
    (47) iden -> . IDEN
    (46) num -> . NUM

    NOT             shift and go to state 32
    MINUS           shift and go to state 31
    PLUS            shift and go to state 30
    LPAREN          shift and go to state 20
    IDEN            shift and go to state 10
    NUM             shift and go to state 35

    expr                           shift and go to state 62
    iden                           shift and go to state 19
    num                            shift and go to state 33

state 31

    (31) expr -> MINUS . expr
    (14) expr -> . iden LPAREN clist RPAREN
    (15) expr -> . expr LSQUAREBR expr RSQUAREBR
    (16) expr -> . expr EQ expr
    (17) expr -> . expr PLUS expr
    (18) expr -> . expr MINUS expr
    (19) expr -> . expr TIMES expr
    (20) expr -> . expr DIVIDE expr
    (21) expr -> . expr MOD expr
    (22) expr -> . expr LESS_THAN expr
    (23) expr -> . expr GREATER_THAN expr
    (24) expr -> . expr PARITY expr
    (25) expr -> . expr NOT_EQ expr
    (26) expr -> . expr LESS_EQUAL expr
    (27) expr -> . expr GREATER_EQUAL expr
    (28) expr -> . expr OR expr
    (29) expr -> . expr AND expr
    (30) expr -> . NOT expr
    (31) expr -> . MINUS expr
    (32) expr -> . PLUS expr
    (33) expr -> . LPAREN expr RPAREN
    (34) expr -> . iden
    (35) expr -> . num
    (47) iden -> . IDEN
    (46) num -> . NUM

    NOT             shift and go to state 32
    MINUS           shift and go to state 31
    PLUS            shift and go to state 30
    LPAREN          shift and go to state 20
    IDEN            shift and go to state 10
    NUM             shift and go to state 35

    expr                           shift and go to state 63
    iden                           shift and go to state 19
    num                            shift and go to state 33

state 32

    (30) expr -> NOT . expr
    (14) expr -> . iden LPAREN clist RPAREN
    (15) expr -> . expr LSQUAREBR expr RSQUAREBR
    (16) expr -> . expr EQ expr
    (17) expr -> . expr PLUS expr
    (18) expr -> . expr MINUS expr
    (19) expr -> . expr TIMES expr
    (20) expr -> . expr DIVIDE expr
    (21) expr -> . expr MOD expr
    (22) expr -> . expr LESS_THAN expr
    (23) expr -> . expr GREATER_THAN expr
    (24) expr -> . expr PARITY expr
    (25) expr -> . expr NOT_EQ expr
    (26) expr -> . expr LESS_EQUAL expr
    (27) expr -> . expr GREATER_EQUAL expr
    (28) expr -> . expr OR expr
    (29) expr -> . expr AND expr
    (30) expr -> . NOT expr
    (31) expr -> . MINUS expr
    (32) expr -> . PLUS expr
    (33) expr -> . LPAREN expr RPAREN
    (34) expr -> . iden
    (35) expr -> . num
    (47) iden -> . IDEN
    (46) num -> . NUM

    NOT             shift and go to state 32
    MINUS           shift and go to state 31
    PLUS            shift and go to state 30
    LPAREN          shift and go to state 20
    IDEN            shift and go to state 10
    NUM             shift and go to state 35

    expr                           shift and go to state 64
    iden                           shift and go to state 19
    num                            shift and go to state 33

state 33

    (35) expr -> num .

    SEMI_COLON      reduce using rule 35 (expr -> num .)
    LSQUAREBR       reduce using rule 35 (expr -> num .)
    EQ              reduce using rule 35 (expr -> num .)
    PLUS            reduce using rule 35 (expr -> num .)
    MINUS           reduce using rule 35 (expr -> num .)
    TIMES           reduce using rule 35 (expr -> num .)
    DIVIDE          reduce using rule 35 (expr -> num .)
    MOD             reduce using rule 35 (expr -> num .)
    LESS_THAN       reduce using rule 35 (expr -> num .)
    GREATER_THAN    reduce using rule 35 (expr -> num .)
    PARITY          reduce using rule 35 (expr -> num .)
    NOT_EQ          reduce using rule 35 (expr -> num .)
    LESS_EQUAL      reduce using rule 35 (expr -> num .)
    GREATER_EQUAL   reduce using rule 35 (expr -> num .)
    OR              reduce using rule 35 (expr -> num .)
    AND             reduce using rule 35 (expr -> num .)
    RPAREN          reduce using rule 35 (expr -> num .)
    COMMA           reduce using rule 35 (expr -> num .)
    RSQUAREBR       reduce using rule 35 (expr -> num .)
    TO              reduce using rule 35 (expr -> num .)


state 34

    (42) defvar -> VAR . type iden
    (43) type -> . INT
    (44) type -> . VECTOR
    (45) type -> . NULL

    INT             shift and go to state 6
    VECTOR          shift and go to state 7
    NULL            shift and go to state 8

    type                           shift and go to state 65

state 35

    (46) num -> NUM .

    SEMI_COLON      reduce using rule 46 (num -> NUM .)
    LSQUAREBR       reduce using rule 46 (num -> NUM .)
    EQ              reduce using rule 46 (num -> NUM .)
    PLUS            reduce using rule 46 (num -> NUM .)
    MINUS           reduce using rule 46 (num -> NUM .)
    TIMES           reduce using rule 46 (num -> NUM .)
    DIVIDE          reduce using rule 46 (num -> NUM .)
    MOD             reduce using rule 46 (num -> NUM .)
    LESS_THAN       reduce using rule 46 (num -> NUM .)
    GREATER_THAN    reduce using rule 46 (num -> NUM .)
    PARITY          reduce using rule 46 (num -> NUM .)
    NOT_EQ          reduce using rule 46 (num -> NUM .)
    LESS_EQUAL      reduce using rule 46 (num -> NUM .)
    GREATER_EQUAL   reduce using rule 46 (num -> NUM .)
    OR              reduce using rule 46 (num -> NUM .)
    AND             reduce using rule 46 (num -> NUM .)
    RPAREN          reduce using rule 46 (num -> NUM .)
    COMMA           reduce using rule 46 (num -> NUM .)
    RSQUAREBR       reduce using rule 46 (num -> NUM .)
    TO              reduce using rule 46 (num -> NUM .)


state 36

    (14) expr -> iden LPAREN . clist RPAREN
    (39) clist -> . expr
    (40) clist -> . expr COMMA clist
    (41) clist -> .
    (14) expr -> . iden LPAREN clist RPAREN
    (15) expr -> . expr LSQUAREBR expr RSQUAREBR
    (16) expr -> . expr EQ expr
    (17) expr -> . expr PLUS expr
    (18) expr -> . expr MINUS expr
    (19) expr -> . expr TIMES expr
    (20) expr -> . expr DIVIDE expr
    (21) expr -> . expr MOD expr
    (22) expr -> . expr LESS_THAN expr
    (23) expr -> . expr GREATER_THAN expr
    (24) expr -> . expr PARITY expr
    (25) expr -> . expr NOT_EQ expr
    (26) expr -> . expr LESS_EQUAL expr
    (27) expr -> . expr GREATER_EQUAL expr
    (28) expr -> . expr OR expr
    (29) expr -> . expr AND expr
    (30) expr -> . NOT expr
    (31) expr -> . MINUS expr
    (32) expr -> . PLUS expr
    (33) expr -> . LPAREN expr RPAREN
    (34) expr -> . iden
    (35) expr -> . num
    (47) iden -> . IDEN
    (46) num -> . NUM

    RPAREN          reduce using rule 41 (clist -> .)
    NOT             shift and go to state 32
    MINUS           shift and go to state 31
    PLUS            shift and go to state 30
    LPAREN          shift and go to state 20
    IDEN            shift and go to state 10
    NUM             shift and go to state 35

    iden                           shift and go to state 19
    clist                          shift and go to state 66
    expr                           shift and go to state 67
    num                            shift and go to state 33

state 37

    (33) expr -> LPAREN expr . RPAREN
    (15) expr -> expr . LSQUAREBR expr RSQUAREBR
    (16) expr -> expr . EQ expr
    (17) expr -> expr . PLUS expr
    (18) expr -> expr . MINUS expr
    (19) expr -> expr . TIMES expr
    (20) expr -> expr . DIVIDE expr
    (21) expr -> expr . MOD expr
    (22) expr -> expr . LESS_THAN expr
    (23) expr -> expr . GREATER_THAN expr
    (24) expr -> expr . PARITY expr
    (25) expr -> expr . NOT_EQ expr
    (26) expr -> expr . LESS_EQUAL expr
    (27) expr -> expr . GREATER_EQUAL expr
    (28) expr -> expr . OR expr
    (29) expr -> expr . AND expr

    RPAREN          shift and go to state 68
    LSQUAREBR       shift and go to state 42
    EQ              shift and go to state 43
    PLUS            shift and go to state 44
    MINUS           shift and go to state 45
    TIMES           shift and go to state 46
    DIVIDE          shift and go to state 47
    MOD             shift and go to state 48
    LESS_THAN       shift and go to state 49
    GREATER_THAN    shift and go to state 50
    PARITY          shift and go to state 51
    NOT_EQ          shift and go to state 52
    LESS_EQUAL      shift and go to state 53
    GREATER_EQUAL   shift and go to state 54
    OR              shift and go to state 55
    AND             shift and go to state 56


state 38

    (13) stmt -> LBRACE body . RBRACE

    RBRACE          shift and go to state 69


state 39

    (3) func -> DEF type iden LPAREN flist RPAREN LBRACE body RBRACE .

    DEF             reduce using rule 3 (func -> DEF type iden LPAREN flist RPAREN LBRACE body RBRACE .)
    $end            reduce using rule 3 (func -> DEF type iden LPAREN flist RPAREN LBRACE body RBRACE .)


state 40

    (5) body -> stmt body .

    RBRACE          reduce using rule 5 (body -> stmt body .)


state 41

    (6) stmt -> expr SEMI_COLON .

    IF              reduce using rule 6 (stmt -> expr SEMI_COLON .)
    WHILE           reduce using rule 6 (stmt -> expr SEMI_COLON .)
    FOR             reduce using rule 6 (stmt -> expr SEMI_COLON .)
    RETURN          reduce using rule 6 (stmt -> expr SEMI_COLON .)
    LBRACE          reduce using rule 6 (stmt -> expr SEMI_COLON .)
    NOT             reduce using rule 6 (stmt -> expr SEMI_COLON .)
    MINUS           reduce using rule 6 (stmt -> expr SEMI_COLON .)
    PLUS            reduce using rule 6 (stmt -> expr SEMI_COLON .)
    LPAREN          reduce using rule 6 (stmt -> expr SEMI_COLON .)
    VAR             reduce using rule 6 (stmt -> expr SEMI_COLON .)
    IDEN            reduce using rule 6 (stmt -> expr SEMI_COLON .)
    NUM             reduce using rule 6 (stmt -> expr SEMI_COLON .)
    RBRACE          reduce using rule 6 (stmt -> expr SEMI_COLON .)
    ELSE            reduce using rule 6 (stmt -> expr SEMI_COLON .)


state 42
